crates/toon-schema/tests/compile_fail/malformed_json.stderr
error: Invalid JSON in example: expected ident at line 1 column 2. Examples must be valid JSON matching the field type. For strings use: "value", for numbers: 42, for booleans: true/false, for arrays: [1, 2, 3]
 --> tests/compile_fail/malformed_json.rs:7:54
  |
7 |     #[toon_schema(description = "A field", example = "not valid json")]
  |                                                      ^^^^^^^^^^^^^^^^
